# Geant_Skeleton

./: .gitignore  CMakeLists.txt  README.md
include/: ActionInitialization.h  AngleScorer.h  DetectorConstruction.h  FlatSurfaceCurrent.h  OpticalDetection.h  PencilBeamPrimaryGenerator.h  PencilBeamRun.h  PencilBeamRunAction.h  PhysicsList.h
share/: init.mac  init_vis.mac  vis.mac
src/: ActionInitialization.cxx  AngleScorer.cxx  CMakeLists.txt  DetectorConstruction.cxx  FlatSurfaceCurrent.cxx  OpticalDetection.cxx  PencilBeamPrimaryGenerator.cxx  PencilBeamRun.cxx  PencilBeamRunAction.cxx  PhysicsList.cxx  main.cxx
